<resources>
    <string name="app_name">PayYay</string>
    <string name="facebook_app_id">341500209583842</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in PayYay now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="preferred_name">Preferred Name</string>
    <string name="title_activity_setting">SettingActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string-array name="nav_drawer_items">
        <item>First</item>
        <item>Second</item>
        <item>Third</item>
        <item>Fourth</item>
        <item>Fifth</item>
        <item>Sixth</item>
    </string-array>
    <array name="nav_drawer_icons">
        <item>@drawable/ic_menu_camera</item>
        <item>@drawable/ic_menu_gallery</item>
        <item>@drawable/ic_menu_manage</item>
        <item>@drawable/ic_menu_send</item>
        <item>@drawable/ic_menu_share</item>
        <item>@drawable/ic_menu_slideshow</item>
    </array>

    <string name="action_settings">Settings</string>
    <string name="add_friend">Add Friends</string>
    <string name="add_bill_popup">Add bill popup window</string>
    <string name="friend_list">Friend List</string>
    <string name="search_add_friend">email or name of your friend</string>
    <string name="bill_description">Enter a description</string>
    <string name="bill_amount">0.00</string>
    <string name="title_activity_basic">BasicActivity</string>
    <string name="split_equally">Split equally</string>
    <string name="split_unequally">Split unequally</string>
    <string name="split_by_percentage">Split by percentages</string>
    <string name="split_by_shares">Split by shares</string>
    <string name="split_by_adjustment">Split by adjustment</string>

    <string name="tab_event">Event</string>
    <string name="tab_bill">Bill</string>
    <string name="tab_balance">Balance</string>

</resources>
